--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-contrib-clean" : "~0.4.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-stylus": "~0.9.0",
     "grunt-contrib-uglify": "~0.2.4",
