--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "grunt-biolerplate",
+  "name": "grunt-boilerplate",
   "description": "Build assets with Grunt.js",
-  "version": "0.1.0",
-  "homepage": "https://github.com/vutran/grunt-biolerplate",
+  "version": "0.1.2",
+  "homepage": "https://github.com/vutran/grunt-boilerplate",
   "repository": {
     "type": "git",
-    "url": "git@github.com:vutran/grunt-biolerplate.git"
+    "url": "git@github.com:vutran/grunt-boilerplate.git"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean" : "~0.4.0",
-    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-imagemin": "~0.3.0",
     "grunt-contrib-stylus": "~0.9.0",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3"
