--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-clean" : "~0.4.0",
+    "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-imagemin": "~0.3.0",
     "grunt-contrib-stylus": "~0.9.0",
     "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-sass": "~0.5.0"
   }
 }
