--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "grunt-contrib-stylus": "~0.9.0",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-sass": "~0.5.0"
-  }
-  "license" : "MIT"
+    "grunt-contrib-sass": "~0.5.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-jshint": "~0.8.0"
+  },
+  "license": "MIT"
 }
