--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-sass": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-jshint": "~0.8.0"
+    "grunt-contrib-jshint": "~0.8.0",
+    "load-grunt-config": "~0.7.1",
+    "load-grunt-tasks": "~0.3.0",
+    "grunt-contrib-less": "~0.9.0"
   },
   "license": "MIT"
 }
