--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "grunt-contrib-jshint": "~0.8.0",
     "load-grunt-config": "~0.7.1",
     "load-grunt-tasks": "~0.3.0",
-    "grunt-contrib-less": "~0.9.0"
+    "grunt-contrib-less": "~0.9.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-cssmin": "~0.7.0"
   },
   "license": "MIT"
 }
