--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: node_js
 node_js:
   - "0.8"
   - "0.10"
-before_script:
+before_install:
+  - gem update --system
+  - gem install sass
   - npm install -g grunt-cli
 script:
   - grunt default
