--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
 before_install:
   - gem update --system
   - gem install sass
+  - gem install compass
   - npm install -g grunt-cli
 script:
   - grunt default
