--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "load-grunt-tasks": "~0.3.0",
     "grunt-contrib-less": "~0.9.0",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-cssmin": "~0.7.0"
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-bower-task": "~0.3.4"
   },
   "license": "MIT",
   "dependencies": {
