--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "grunt-contrib-less": "~0.9.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-bower-task": "~0.3.4"
+    "grunt-bower-task": "~0.3.4",
+    "grunt-contrib-requirejs": "~0.4.3"
   },
   "license": "MIT",
   "dependencies": {
